[package]
name         = "protobuf"
description  = "PhysicalPlan / LogicalExpr / Action protobuf serialization. Rust port of kquery/protobuf."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true
build        = "build.rs"

[dependencies]
prost         = { workspace = true }
tonic         = { workspace = true }
chrono        = { workspace = true }       # NaiveDate for LogicalExpr::LiteralDate serdes
arrow-schema  = { workspace = true }       # DataType return-type for from_proto_arrow_type
datatypes     = { path = "../datatypes" }
datasource    = { path = "../datasource" } # CsvDataSource / ParquetDataSource for scan deserialisation
logical-plan  = { path = "../logical-plan" }
physical-plan = { path = "../physical-plan" }

[build-dependencies]
tonic-build = "0.12"
