[package]
name         = "protobuf"
description  = "PhysicalPlan / LogicalExpr / Action protobuf serialization."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true
build        = "build.rs"

[dependencies]
prost         = { workspace = true }
tonic         = { workspace = true }
chrono        = { workspace = true }       # NaiveDate for LogicalExpr::LiteralDate serdes
arrow-schema  = { workspace = true }       # DataType return-type for from_proto_arrow_type
datatypes     = { path = "../datatypes" }
datasource    = { path = "../datasource" } # CsvDataSource / ParquetDataSource for scan deserialisation
logical-plan  = { path = "../logical-plan" }
physical-plan = { path = "../physical-plan" }

[build-dependencies]
# tonic 0.14 split the prost-based codegen (`configure()` / `compile_protos`)
# out of `tonic-build` into the `tonic-prost-build` crate.
tonic-prost-build = "0.14"
