[package]
name         = "query-planner"
description  = "Logical → physical plan translation. Rust port of kquery/query-planner."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
logical-plan  = { path = "../logical-plan" }
physical-plan = { path = "../physical-plan" }
