[package]
name         = "query-planner"
description  = "Logical → physical plan translation. Rust port of kquery/query-planner."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
chrono        = { workspace = true }   # NaiveDate → days_since_epoch for LiteralDate lowering (Kotlin `LocalDate.toEpochDay()`)
datatypes     = { path = "../datatypes" }
logical-plan  = { path = "../logical-plan" }
physical-plan = { path = "../physical-plan" }

[dev-dependencies]
# The QueryPlanner test builds a logical plan, optimizes it, then plans it —
# so it needs an in-memory data source and the optimizer.
datasource = { path = "../datasource" }
optimizer  = { path = "../optimizer" }
