[package]
name         = "sql"
description  = "Hand-written Pratt parser, tokenizer, and SQL→LogicalPlan compiler."
edition.workspace      = true
license.workspace      = true
version.workspace      = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
arrow-schema = { workspace = true }
chrono       = { workspace = true }      # NaiveDate::parse for SqlExpr::Date literal lowering

datatypes    = { path = "../datatypes" }
logical-plan = { path = "../logical-plan" }

# The hand-rolled Pratt parser is the pedagogical core of this module — do
# not replace it with `sqlparser-rs` or another third-party parser.

[dev-dependencies]
# Used only by the SQL-planner test, which builds a Scan over a CsvDataSource.
datasource = { path = "../datasource" }
